crates/compose/src/snapshots/mxr_compose__parse__tests__fixture_headers__folded-flowed.snap
---
source: crates/compose/src/parse.rs
expression: "json!({\n    \"from\":\n    parsed.from.as_ref().map(|addr|\n    json!({\"name\": addr.name.clone(), \"email\": addr.email.clone()})), \"to\":\n    parsed.to.iter().map(|addr|\n    json!({\"name\": addr.name.clone(), \"email\":\n        addr.email.clone()})).collect::<Vec<_>>(), \"cc\":\n    parsed.cc.iter().map(|addr|\n    json!({\"name\": addr.name.clone(), \"email\":\n        addr.email.clone()})).collect::<Vec<_>>(), \"bcc\":\n    parsed.bcc.iter().map(|addr|\n    json!({\"name\": addr.name.clone(), \"email\":\n        addr.email.clone()})).collect::<Vec<_>>(), \"subject\": parsed.subject,\n    \"message_id\": parsed.message_id_header, \"in_reply_to\": parsed.in_reply_to,\n    \"references\": parsed.references, \"unsubscribe\":\n    format!(\"{:?}\", parsed.unsubscribe), \"list_id\": metadata.list_id,\n    \"auth_results\": metadata.auth_results, \"content_language\":\n    metadata.content_language, \"text_plain_format\":\n    format!(\"{:?}\", metadata.text_plain_format), \"raw_headers_present\":\n    metadata.raw_headers.is_some(),\n})"
---
auth_results:
  - mx.example.net; dkim=pass header.d=example.com; spf=pass
bcc: []
cc:
  - email: dev@example.com
    name: ~
content_language:
  - fr
from:
  email: jose@example.com
  name: José Example
in_reply_to: "<parent@example.com>"
list_id: ~
message_id: "<folded-flowed@example.com>"
raw_headers_present: true
references:
  - "<root@example.com>"
  - "<parent@example.com>"
subject: Quarterly update — release notes
text_plain_format: "Some(Flowed { delsp: true })"
to:
  - email: team@example.com
    name: Team
  - email: support@example.com
    name: Support List
unsubscribe: "OneClick { url: \"https://example.com/unsubscribe?id=abc123\" }"
